--- a/Week-1.3/03-mongo/package.json
+++ b/Week-1.3/03-mongo/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nodejs-week3",
+  "name": "03-mongo",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,11 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.20.2",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.2",
+    "@babel/plugin-transform-modules-commonjs": "^7.23.3",
+    "jest": "^29.7.0",
     "mongoose": "^8.0.3",
-    "zod": "^3.22.4"
+    "supertest": "^6.3.3",
+    "ts-node": "^10.9.2"
   }
 }
